--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,7 +15,7 @@ collections:
       - label: "Stats"
         name: "gameStats"
         widget: "list"
-        fields:
+        field:
           - label: "Name"
             name: "stat"
             widget: "text"
