--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: /img
 collections:
   - name: "games"
     label: "Games"
-    folder: "src/pages/games"
+    folder: "src/data/games"
     create: true
     fields:
       - {label: "Name", name: "gameName", widget: "string"}
