--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,6 +15,7 @@ collections:
       - label: "Stats"
         name: "gameStats"
         widget: "list"
+        default: ["Ex1", "Ex2", "Ex3"]
   
   - name: "blog"
     label: "Blog"
