--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,7 @@ collections:
         widget: "list"
         fields:
         - {label: "Name", name: "statName", widget: "string"}
-        - {label: "Default", name: "statDefault", widget: "number", default: "10"}
+        - {label: "Default", name: "statDefault", widget: "number", valueType: "int", default: 10, min: 3, max: 20}
   
   - name: "blog"
     label: "Blog"
