--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,7 +11,7 @@ collections:
     folder: "src/data/games"
     create: true
     fields:
-      - {label: "Name", name: "gameName", widget: "string"}
+      - {label: "title", name: "title", widget: "string"}
       - label: "Stats"
         name: "gameStats"
         widget: "list"
