--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,7 +30,7 @@ collections:
       - {label: "title", name: "title", widget: "string"}
       - {label: "Image", name: "src", widget: "image"}
       - {label: "Text", name: "text", widget: "text"}
-      - {label: "Number of Hexes", name: "n", widget: "hidden"}
+      - {label: "Number of Hexes", name: "n", widget: "hidden", default: 5}
       
   - name: "blog"
     label: "Blog"
