adjust config.yml again

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -62,7 +62,7 @@ collections:
   files:
   - label: "Main Navbar"
     name: "main"
-    file: "/data/navbar.json"
+    file: "src/data/navbar.json"
     fields:
     - {label: "Title", name: "title", widget: "string"}
     - label: "Brand"
